# stock_picker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
config/: secrets.env.example
datasets/market_data/: AAPL.parquet
datasets/samples/: aapl_ohlcv_sample.csv
datasets/sec/atom/AAPL/: 0000320193.atom.xml
docs/: analyst-coverage.md  env.md  index.md
docs/decisions/: 001-backtesting-v1-scope.md
infra/phase1/: README.md  docker-compose.yml
infra/phase1/mcp-fundamental/: Dockerfile
infra/phase1/squid-fundamental/: Dockerfile  squid.conf
scripts/phase1/: README.md  install-obsidian-post-commit.sh  obsidian-sync.sh
specs/: backtesting-v1.md  poc-1.md  research.md
src/stock_picker/: _cli.py  cli.py  doctor.py  load_env.py
src/stock_picker/backtesting/: __init__.py  types.py
src/stock_picker/phase1/: __init__.py  compose.py
src/stock_picker/phase2/: __init__.py  adhoc.py  scout.py
src/stock_picker/poc1/: __init__.py  budget.py  exceptions.py  graph.py  llm_manager.py  models.py
tests/: conftest.py
tests/unit/: test_doctor.py  test_load_env.py  test_phase1_layout.py  test_phase2_fetch.py  test_phase2_import_csv.py  test_poc1_budget.py  test_poc1_graph.py
